@@ -3,6 +3,7 @@ mx-packageinstaller (24.12.02) mx; urgency=medium
   * Set the application name to fix the Qt translation domain and
     window icon name based on the application name instead of the
     executable file or symlink name
+  * Adjust regex for Packages filenames without binary-arch from flat-repo
 
  -- fehlix <fehlix@mxlinux.org>  Tue, 31 Dec 2024 10:19:35 -0500
 
